--- a/src/styles.css
+++ b/src/styles.css
@@ -263,9 +263,10 @@ body{
     top: 679px;
 }
 .mask22{
-    left: 1274px;
-    /* top: 679px; */
+    /* left: 1274px;
+    top: 679px; */
     bottom:0;
+    right:0;
 }
 .box23{
     width: 100px;
@@ -274,8 +275,8 @@ body{
     top: 684px;
 }
 .mask23{
-    /* left: 1384px; */
-    /* top: 684px; */
+    /* left: 1384px;
+    top: 684px; */
     bottom:0;
     right:0;
 }
