--- a/src/styles.css
+++ b/src/styles.css
@@ -20,8 +20,9 @@ body{
     /* left:0;
     top: 0; */
     pointer-events: none;
-    color:#fff;
-    background:rgba(0,0,0,0.3);
+    color:#000;
+    /* background:rgba(0,0,0,0.3); */
+    background:#ccc;
     border-radius: 10px;
 }
 
